# Hero-is-Running

./: CMakeLists.txt
include/player/: player.h
include/risk/: risk_profile.h
src/: main.cpp
src/risk/: risk_profile.cpp
src/ui/: main_menu.cpp
